diesel_compile_tests/tests/fail/update_statement_does_not_support_returning_methods_on_sqlite.stderr
error[E0277]: the trait bound `diesel::sqlite::Sqlite: diesel::backend::SupportsReturningClause` is not satisfied
  --> $DIR/update_statement_does_not_support_returning_methods_on_sqlite.rs:18:10
   |
18 |         .get_result(&connection);
   |          ^^^^^^^^^^ the trait `diesel::backend::SupportsReturningClause` is not implemented for `diesel::sqlite::Sqlite`
   |
   = note: required because of the requirements on the impl of `diesel::query_builder::QueryFragment<diesel::sqlite::Sqlite>` for `diesel::query_builder::returning_clause::ReturningClause<(users::columns::id, users::columns::name)>`
   = note: required because of the requirements on the impl of `diesel::query_builder::QueryFragment<diesel::sqlite::Sqlite>` for `diesel::query_builder::UpdateStatement<users::table, diesel::query_builder::where_clause::WhereClause<diesel::expression::grouped::Grouped<diesel::expression::operators::Eq<users::columns::id, diesel::expression::bound::Bound<diesel::sql_types::Integer, i32>>>>, diesel::query_builder::update_statement::changeset::Assign<users::columns::name, diesel::expression::bound::Bound<diesel::sql_types::Text, &str>>, diesel::query_builder::returning_clause::ReturningClause<(users::columns::id, users::columns::name)>>`
   = note: required because of the requirements on the impl of `diesel::query_dsl::LoadQuery<diesel::SqliteConnection, _>` for `diesel::query_builder::UpdateStatement<users::table, diesel::query_builder::where_clause::WhereClause<diesel::expression::grouped::Grouped<diesel::expression::operators::Eq<users::columns::id, diesel::expression::bound::Bound<diesel::sql_types::Integer, i32>>>>, diesel::query_builder::update_statement::changeset::Assign<users::columns::name, diesel::expression::bound::Bound<diesel::sql_types::Text, &str>>>`

error[E0277]: the trait bound `diesel::sqlite::Sqlite: diesel::backend::SupportsReturningClause` is not satisfied
  --> $DIR/update_statement_does_not_support_returning_methods_on_sqlite.rs:23:10
   |
23 |         .get_result(&connection);
   |          ^^^^^^^^^^ the trait `diesel::backend::SupportsReturningClause` is not implemented for `diesel::sqlite::Sqlite`
   |
   = note: required because of the requirements on the impl of `diesel::query_builder::QueryFragment<diesel::sqlite::Sqlite>` for `diesel::query_builder::returning_clause::ReturningClause<users::columns::name>`
   = note: required because of the requirements on the impl of `diesel::query_builder::QueryFragment<diesel::sqlite::Sqlite>` for `diesel::query_builder::UpdateStatement<users::table, diesel::query_builder::where_clause::WhereClause<diesel::expression::grouped::Grouped<diesel::expression::operators::Eq<users::columns::id, diesel::expression::bound::Bound<diesel::sql_types::Integer, i32>>>>, diesel::query_builder::update_statement::changeset::Assign<users::columns::name, diesel::expression::bound::Bound<diesel::sql_types::Text, &str>>, diesel::query_builder::returning_clause::ReturningClause<users::columns::name>>`
   = note: required because of the requirements on the impl of `diesel::query_dsl::LoadQuery<diesel::SqliteConnection, _>` for `diesel::query_builder::UpdateStatement<users::table, diesel::query_builder::where_clause::WhereClause<diesel::expression::grouped::Grouped<diesel::expression::operators::Eq<users::columns::id, diesel::expression::bound::Bound<diesel::sql_types::Integer, i32>>>>, diesel::query_builder::update_statement::changeset::Assign<users::columns::name, diesel::expression::bound::Bound<diesel::sql_types::Text, &str>>, diesel::query_builder::returning_clause::ReturningClause<users::columns::name>>`
